# ros2-TatyanaBerlenko

Practice02/src/task01/: package.xml  setup.py
Practice02/src/task01/launch/: task01.launch
Practice02/src/task01/task01/: receiver.py
