<?xml version="1.0"?>
<package format="3">
  <name>task01</name>
  <version>0.0.1</version>
  <description>Task01</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>TBD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
